--- a/rclcpp/minimal_subscriber/CMakeLists.txt
+++ b/rclcpp/minimal_subscriber/CMakeLists.txt
@@ -13,15 +13,16 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
 add_executable(subscriber_lambda lambda.cpp)
-ament_target_dependencies(subscriber_lambda rclcpp std_msgs)
+ament_target_dependencies(subscriber_lambda rclcpp std_msgs sensor_msgs)
 
 add_executable(subscriber_member_function member_function.cpp)
-ament_target_dependencies(subscriber_member_function rclcpp std_msgs)
+ament_target_dependencies(subscriber_member_function rclcpp std_msgs sensor_msgs)
 
 add_executable(subscriber_not_composable not_composable.cpp)
-ament_target_dependencies(subscriber_not_composable rclcpp std_msgs)
+ament_target_dependencies(subscriber_not_composable rclcpp std_msgs sensor_msgs)
 
 install(TARGETS
   subscriber_lambda
